--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,6 +21,7 @@ phases:
   post_build:
     commands:
       - sam deploy
+        --no-confirm-changeset
         --stack-name $STACK_NAME
         --region $AWS_REGION
         --capabilities CAPABILITY_IAM
